# podgen

./: .env  .env.example  .gitignore  README.md  conversation-generator-fix.py  fix-syntax-error.py  fix-tts-init.py  fix_doc_commands.py  install_models.py  pyproject.toml  test_add_file.py  test_documents.db
src/podgen/: __init__.py  cli.py  config.py
src/podgen/cli/: __init__.py  app.py  async_app.py  audio_player.py  cli_utils.py  command_registry.py  conversation_commands.py  conversation_config.py  speaker_profiles.py
src/podgen/cli/commands/: __init__.py  doc_commands.py  key_commands.py  path_commands.py  podcast_commands.py
src/podgen/cli/services/: __init__.py  completion.py  model_config.py
src/podgen/cli/utils/: __init__.py  formatting.py  validators.py
src/podgen/help/: __init__.py  command_help.py
src/podgen/models/: __init__.py  conversation_config.py  conversation_style.py  dialogue.py  speaker.py  speaker_profiles.py
src/podgen/services/: __init__.py  audio.py  content_analyzer.py  conversation.py  llm_prompts.py  llm_service.py  podcast_generator.py  tts.py
src/podgen/services/content/: __init__.py  extractor_service.py  extractors.py  semantic_analyzer.py  text_chunker.py
src/podgen/services/llm/: __init__.py  base.py  ollama_service.py  openai_service.py  prompts.py  response_parser.py  session_manager.py
src/podgen/services/tts/: __init__.py  base.py  cloud.py  local.py
src/podgen/storage/: __init__.py  base.py  document_cli.py  json_storage.py
src/podgen/storage/conversation/: __init__.py  models.py  store.py
(+4 files in other folders)
