[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "podgen"
version = "0.1.0"
description = "AI-powered system for generating conversational podcasts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyttsx3>=2.90",
    "numpy>=1.20.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
podgen = "podgen.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["podgen*"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

